# cpp-template

./: .clangd  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists.txt.old  README.md  build.sh  cz.toml  flake.nix
.github/workflows/: cmake-multi-platform.yml
include/: utils.hpp
src/: api.cpp  main.cpp  utils.cpp
tests/: CMakeLists.txt  sample.cpp
